# DockerMonitor

./: .gitignore  README.md
backend/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMakePresets.json  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  docker_monitor.slnx  docker_monitor.vcxproj  docker_monitor.vcxproj.filters  main.cpp
backend/docker_monitor.dir/Release/docker_monitor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  docker_monitor.lastbuildstate
backend/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
backend/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
frontend/: app.js  index.html  style.css
